# your-wallet

./: .gitignore  README.md
client/: pubspec.yaml
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  app_router.dart  main.dart  router_singleton.dart
client/lib/models/: account.dart  account.g.dart  asset.dart  asset.g.dart  transaction.dart  transaction.g.dart  user.dart  user.g.dart
client/lib/providers/: auth_provider.dart
client/lib/screens/: add_account_screen.dart  home_screen.dart  login_screen.dart  register_screen.dart  splash_screen.dart
client/lib/services/: account_service.dart  api_client.dart  api_service.dart  asset_service.dart  http_adapter_io.dart  http_adapter_stub.dart  transaction_service.dart  user_service.dart
client/macos/Runner.xcodeproj/: project.pbxproj
docs/: API.md  TODO.md
server/: .env  Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m000001_create_tables.rs
server/src/: lib.rs  main.rs
server/src/config/: mod.rs
server/src/models/: account.rs  asset.rs  mod.rs  transaction.rs  user.rs
server/src/routes/: accounts.rs  assets.rs  auth.rs  error.rs  health.rs  mod.rs  transactions.rs  users.rs
server/src/services/: account.rs  asset.rs  database.rs  mod.rs  transaction.rs  user.rs
server/tests/: api.rs
