[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
migration = { version = "0.1.0", path = "migration" }
sea-orm = { version = "1.1.16", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = "0.5.2"
